# rexops

./: .gitignore  Cargo.toml  LAST_WORK.md  README.md  REXOPS-STARTING-STATE.md
.github/workflows/: ci.yml  release.yml
crates/rexops-adapters/: Cargo.toml
crates/rexops-adapters/fixtures/bulwark/: scan_feed_v1.json  scan_sample.json
crates/rexops-adapters/fixtures/scriptvault/: export_v1.json
crates/rexops-adapters/fixtures/toolfoundry/: rexops_feed_v1.json
crates/rexops-adapters/fixtures/workstate/: snapshot_v1.json  snapshot_v3.json
crates/rexops-adapters/src/: adapter.rs  bulwark.rs  bulwark_feed.rs  error.rs  exec.rs  lib.rs  scriptvault.rs  system.rs  toolfoundry.rs  types.rs  workstate.rs
crates/rexops-adapters/src/models/: findings.rs  mod.rs  scripts.rs  tools.rs
crates/rexops-adapters/tests/: workstate_parity.rs
crates/rexops-app/: Cargo.toml
crates/rexops-app/src/: config.rs  launch.rs  lib.rs  snapshot.rs  status_probe.rs
crates/rexops-app/src/jobs/: manager.rs  mod.rs  outcome.rs  process.rs
crates/rexops-app/src/refresh/: controller.rs  mod.rs
crates/rexops-app/src/tools/: availability.rs  catalog.rs  launcher.rs  mod.rs
crates/rexops-cli/: Cargo.toml
crates/rexops-cli/src/: launch.rs  main.rs
crates/rexops-core/: Cargo.toml
crates/rexops-core/src/: adapter_types.rs  component.rs  component_table.rs  config.rs  error.rs  ids.rs  lib.rs  models.rs  registry.rs  system_info.rs  workstate_info.rs
crates/rexops-core/src/adapter_models/: findings.rs  mod.rs  scripts.rs  tools.rs
crates/rexops-tui/: ARCHITECTURE.md  Cargo.toml
crates/rexops-tui/src/: action.rs  app.rs  event.rs  health.rs  jobs.rs  keymap.rs  launcher.rs  lib.rs  main.rs  palette.rs  runtime.rs  theme.rs  ui.rs
crates/rexops-tui/src/app/: heartbeat.rs  mod.rs  navigation.rs  state.rs  update.rs
crates/rexops-tui/src/app/tests/: cockpit.rs  esc.rs  filters.rs  help.rs  jobs.rs  launcher.rs  mod.rs  modal.rs  palette.rs  refresh.rs
crates/rexops-tui/src/commands/: dispatch.rs  mod.rs  palette.rs
crates/rexops-tui/src/input/: action.rs  keymap.rs  mod.rs
crates/rexops-tui/src/jobs/: manager.rs  mod.rs  process.rs
crates/rexops-tui/src/screens/: adapters.rs  cockpit.rs  cockpit_detail.rs  cockpit_nav.rs  dashboard.rs  jobs.rs  launchpad.rs  mod.rs  scripts.rs  system.rs  tools.rs
crates/rexops-tui/src/tools/: catalog.rs  launcher.rs  mod.rs
crates/rexops-tui/src/ui/: layout.rs  mod.rs  palette.rs  status_bar.rs  tests.rs
crates/rexops-tui/src/ui/cockpit_widgets/: card_grid.rs  identity_banner.rs  mod.rs  status_card.rs  status_light.rs
crates/rexops-tui/src/ui/widgets/: mod.rs
crates/rexops-tui/src/widgets/: adapter_item.rs  health_badge.rs  log_line.rs  mod.rs
docs/: ARCHITECTURE.md  ERROR_HANDLING.md  LAUNCHER_DESIGN.md  ROADMAP.md  TUI_DESIGN.md
docs/superpowers/plans/: 2026-06-13-core-tui-separation.md  2026-06-20-rexops-cockpit-phase-a-registry-spine.md  2026-06-21-rexops-cockpit-phase-b-cockpit-screen.md  2026-06-21-rexops-cockpit-phase-c-interactive-cockpit.md  2026-06-21-rexops-cockpit-phase-d-feedready-tools.md  2026-06-21-rexops-cockpit-phase-e-pulse-heartbeat.md
docs/superpowers/specs/: 2026-06-04-bulwark-scan-feed-consumer-design.md  2026-06-04-confirmed-mutating-actions-design.md  2026-06-04-launcher-screen-design.md  2026-06-04-scriptvault-export-consumer-design.md  2026-06-04-toolfoundry-feed-consumer-design.md  2026-06-04-workstate-snapshot-consumer-design.md  2026-06-13-core-tui-separation-design.md  2026-06-16-suite-catalog-design.md  2026-06-20-rexops-cockpit-redesign-design.md  2026-06-21-rexops-cockpit-phase-d-feedready-tools-design.md  2026-06-21-rexops-cockpit-phase-e-pulse-heartbeat-design.md  2026-06-21-rexops-cockpit-phase-f-cli-launch-design.md
examples/: config.yaml
