[workspace]
members = [
    "crates/rexops-adapters",
    "crates/rexops-app",
    "crates/rexops-core",
    "crates/rexops-cli",
    "crates/rexops-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tom Lane"]
repository = "https://github.com/tom2025b/rexops"
rust-version = "1.75"
