[workspace]
members = [
    "crates/rexops-adapters",
    "crates/rexops-app",
    "crates/rexops-core",
    "crates/rexops-cli",
    "crates/rexops-tui",
]
# A bare `cargo run` at the workspace root would otherwise be ambiguous between
# the `rexops` (CLI) and `rexops-tui` binaries. Default to the CLI crate so
# `cargo run` resolves to the single `rexops` binary; the TUI stays reachable
# via `cargo run -p rexops-tui`.
default-members = ["crates/rexops-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tom Lane"]
repository = "https://github.com/tom2025b/rexops"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
