[package]
name = "rexops-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Adapter layer for RexOps — thin integrations with Bulwark, System, and Workstate"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Keep deps minimal. No tokio, no async, no anyhow.
# Execution is synchronous via std::process. Timeout implemented with std threads + channels.
