[package]
name = "rexops-app"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tom Lane"]
repository = "https://github.com/tom2025b/rexops"
rust-version = "1.75"
description = "Shared application layer for RexOps: config loading and snapshot building."

[dependencies]
# Core domain models (OpsSnapshot, AppConfig, AdapterId, registries, etc.).
rexops-core = { path = "../rexops-core" }
# Adapters for the actual probes (Bulwark, System, ScriptVault, ToolFoundry).
# rexops-app is deliberately the only place that orchestrates multiple adapters
# into a coherent snapshot for the front-ends (CLI and TUI).
rexops-adapters = { path = "../rexops-adapters" }

# YAML for loading AppConfig from disk (same as before in CLI/TUI).
serde_yaml = "0.9"

[dev-dependencies]
# For any future unit tests of the builder logic (e.g. enabled=false paths).
# serde_json = "1"  # if we add snapshot roundtrip tests here
