[package]
name = "rexops-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared application layer for RexOps: config loading and snapshot building."

[dependencies]
# Core domain models (OpsSnapshot, AppConfig, AdapterId, registries, etc.).
rexops-core = { path = "../rexops-core" }
# Adapters for the actual probes and the Workstate snapshot consumer.
# rexops-app is deliberately the only place that orchestrates multiple adapters
# into a coherent snapshot for the front-ends (CLI and TUI).
rexops-adapters = { path = "../rexops-adapters" }

# YAML for loading AppConfig from disk (same as before in CLI/TUI).
serde_yaml = { workspace = true }
# JSON for classifying piped stdin as a Workstate snapshot.
serde_json = { workspace = true }

# Killing a job's whole process group (not just the immediate child) on cancel
# uses libc::killpg. Unix-only, so target-gated — moved here with the job
# process model from rexops-tui.
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
