[package]
name = "rexops-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core domain models, OpsSnapshot, AppConfig, registries, and pure data transformations for RexOps. Single source of truth. No UI, no execution."

[dependencies]
# Keep deps minimal per project rules. No async, no tokio, no anyhow.
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
