[package]
name = "rexops-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Ratatui + crossterm TUI for RexOps. Keyboard-first shell + 5 screens. Calls rexops-app for snapshots; never owns domain logic or execution."

[[bin]]
name = "rexops-tui"
path = "src/main.rs"

[dependencies]
# Keep versions reasonable for rust-version 1.75. Ratatui is the maintained tui-rs successor.
crossterm = "0.28"
ratatui = "0.29"
# For loading the YAML config (as in examples/config.yaml and AppConfig).
serde_yaml = { workspace = true }

# Thin deps on our own crates. TUI must not duplicate models or adapter concerns.
# The heavy lifting (config + live snapshot building) now comes from rexops-app.
rexops-core = { path = "../rexops-core" }
rexops-app = { path = "../rexops-app" }

# Shared suite-wide TUI chrome (theme/palette + rounded panes + overlays), so
# RexOps and ScriptVault present the same look from one source. Pulled as a GIT
# dependency pinned to a specific linux-ops-suite commit, so a fresh `cargo build`
# works without the sibling umbrella checkout and the version is reproducible.
# Bump `rev` to adopt newer suite-ui.
suite-ui = { git = "https://github.com/tom2025b/linux-ops-suite", rev = "71a4fe5484abb75b494c010b89033dbc7e0faace" }
